Fix query opt div alignent

--- a/django-py3/BGPInspector/bgpWebApp/static/bgpWebApp/css/query_builder.css
+++ b/django-py3/BGPInspector/bgpWebApp/static/bgpWebApp/css/query_builder.css
@@ -20,6 +20,7 @@
 
 #options {
     float:left;
+    width:200px;
     margin-top:25px;
 }
 .checkbox {
